Fixed: alignment, favicon, border-radius

--- a/about.css
+++ b/about.css
@@ -28,7 +28,7 @@
 }
 
 .abilities li{
-    background-color: #1a1a1a;
+    background-color: #4353ff;
     border-radius: 50px;
     padding-right: 20px;
     padding-left: 20px;
