--- a/footer.css
+++ b/footer.css
@@ -11,3 +11,7 @@
 .footer p{
     background-color: transparent;
 }
+
+.footer a{
+    background-color: transparent;
+}
