--- a/works.css
+++ b/works.css
@@ -1,13 +1,13 @@
 .works{
     margin-top: 100px;
     justify-content: center;
+    align-items: center;
     display: flex;
     flex-direction: column;
 }
 
 .works h3{
     font-weight: 600;
-    margin-left: 295px;
 }
 
 .showcase{
@@ -36,6 +36,7 @@
 
 .linkage{
     height: 50px;
+    border-radius: 10px;
 }
 .linkage a{
     padding-left: 50px;
@@ -47,7 +48,7 @@
 
 .works ul{
     display: flex;
-    margin-left: 250px;
+    /* margin-left: 250px; */
     /* justify-content: center; */
     align-items: center;
 }
